WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
104637
[CoordinatedGraphics] compositing/repaint/resize-repaint.html is failing
https://bugs.webkit.org/show_bug.cgi?id=104637
Summary
[CoordinatedGraphics] compositing/repaint/resize-repaint.html is failing
Chris Dumez
Reported
2012-12-10 23:41:33 PST
compositing/repaint/resize-repaint.html was recently added in
http://trac.webkit.org/changeset/137215
but is failing on EFL WK2: --- /home/buildslave-1/webkit-buildslave/efl-linux-64-debug-wk2/build/layout-test-results/compositing/repaint/resize-repaint-expected.txt +++ /home/buildslave-1/webkit-buildslave/efl-linux-64-debug-wk2/build/layout-test-results/compositing/repaint/resize-repaint-actual.txt @@ -12,9 +12,6 @@ (position 8.00 8.00) (bounds 402.00 207.00) (drawsContent 1) - (repaint rects - (rect 0.00 1.00 402.00 1.00) - ) ) ) )
Attachments
Patch
(3.50 KB, patch)
2013-01-03 10:46 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2013-01-03 10:46:47 PST
Created
attachment 181191
[details]
Patch
Chris Dumez
Comment 2
2013-01-03 10:50:55 PST
For the record, here was the diff with the patch from
Bug 106002
applied: --- /home/chris/unencrypted/WebKit/repaint_fix/compositing/repaint/resize-repaint-expected.txt +++ /home/chris/unencrypted/WebKit/repaint_fix/compositing/repaint/resize-repaint-actual.txt @@ -14,6 +14,7 @@ (drawsContent 1) (repaint rects (rect 0.00 1.00 402.00 1.00) + (rect 0.00 0.00 402.00 207.00) ) ) )
WebKit Review Bot
Comment 3
2013-01-07 23:08:24 PST
Comment on
attachment 181191
[details]
Patch Clearing flags on attachment: 181191 Committed
r139034
: <
http://trac.webkit.org/changeset/139034
>
WebKit Review Bot
Comment 4
2013-01-07 23:08:28 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug