[CoordinatedGraphics] compositing/repaint/resize-repaint.html is failing https://bugs.webkit.org/show_bug.cgi?id=104637

Reviewed by Noam Rosenthal.

Source/WebKit2:

r137526 attempted to fix excessive repainting when compositing layers
change size. However, the fix did not suffice for ports using Coordinated
Graphics because CoordinatedGraphicsLayer::setSize() was calling
setNeedsDisplay() causing a full repaint.

This patch removes the call to setNeedsDisplay() in
CoordinatedGraphicsLayer::setSize() so that we don't unconditionally
repaint CoordinatedGraphics layers when their size changes.

* WebProcess/WebPage/CoordinatedGraphics/CoordinatedGraphicsLayer.cpp:
(WebCore::CoordinatedGraphicsLayer::setSize):

LayoutTests:

Unskip compositing/repaint/resize-repaint.html now that Coordinated
Graphics is no longer repainting unconditionally compositing layers
when their size changes.

* platform/efl-wk2/TestExpectations:


git-svn-id: svn://svn.chromium.org/blink/trunk@139034 bbb929c8-8fbe-4397-9dbb-9b2b20218538