third_party/WebKit/Source/WebKit2/WebProcess/WebPage/CoordinatedGraphics/CoordinatedGraphicsLayer.cpp
@@ -215,7 +215,7 @@ void CoordinatedGraphicsLayer::setSize(const FloatSize& size)
         return;
 
     GraphicsLayer::setSize(size);
-    setNeedsDisplay();
+
     if (maskLayer())
         maskLayer()->setSize(size);
     didChangeGeometry();
